--- a/Gin/templates/index.html
+++ b/Gin/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="http://localhost:8080/form" method="post" enctype="multipart/form-data">
+    <form action="http://localhost:8083/test" method="post" enctype="multipart/form-data">
         <!-- form-data用于获取上传的文件，www主要用于获取text内容 -->
         用户名：<input type="text" name="username" placeholder="请输入你的用户名"> <br>
         密&nbsp;&nbsp;&nbsp;码：<input type="password" name="userpassword" placeholder="请输入你的密码"> <br>
