--- a/Gin/templates/uploadmany.html
+++ b/Gin/templates/uploadmany.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-
 <head>
     <title>上传文件示例</title>
 </head>
 
 <body>
-    {{.title}}
-    {{.message}}
     <!-- form-data以POST传送请求到后端，处理 ，路由和页面请求是一致的，但是请求方式不同-->
-    <form action="/upload" method="post" enctype="multipart/form-data">
+    <form action="/uploadmany" method="post" enctype="multipart/form-data">
         <input type="file" name="f1">
+        <input type="file" name="f1">
+
         <input type="submit" value="上传">
+
     </form>
 </body>
 
