--- a/Gin/templates/users/home.html
+++ b/Gin/templates/users/home.html
@@ -1,3 +1,4 @@
+{{define "users/home.html"}}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +10,8 @@
 </head>
 
 <body>
-    <form action="http://localhost:8083/upload" method="post" enctype="multipart/form-data">
+    <div>Are you ok?????</div>
+    <form action="/upload" method="post" enctype="multipart/form-data">
         上传文件:<input type="file" name="upload" multiple>
         <input type="submit" value="提交">
     </form>
@@ -17,3 +19,4 @@
 </body>
 
 </html>
+{{end}}
